--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     li::marker {
       color: #05bfdb;
     }
+    .storyline {
+      color: #088395;
+    }
   </style>
 
   <body>
@@ -63,8 +66,12 @@
       另外，我们也探索了Language
       Model相关的26种概念以及其从2012年迄今的演变。<br />
     </p>
-    <p>我们的可视化面向想要了解学习LM领域或者有意进入该领域开展研究的人群。</p>
-    <p>首先我们想通过累积发文量来呈现LM领域的总体发展趋势历程。</p>
+    <p class="storyline">
+      我们的可视化面向想要了解学习LM领域或者有意进入该领域开展研究的人群。
+    </p>
+    <p class="storyline">
+      首先我们想通过累积发文量来呈现LM领域的总体发展趋势历程。
+    </p>
     <h1>language model领域论文产出量</h1>
     <p>
       图以成果累计量为y轴，时间为x轴表现了语言模型领域历年来的积累情况。1960年代人工智能概念提出后，學界相继取得了一批令人瞩目的研究成果，如机器定理证明、跳棋程序等，掀起人工智能发展的第一个高潮。对应语言模型的相关研究，这时候也开始有一些学术成果发表。<br />
@@ -80,7 +87,9 @@
       src="workCnt/index.html"
       scrolling="no"
     ></iframe>
-    <p>那么近年LM领域出现热度攀升现象，是否来源于突破性论文的产生呢？</p>
+    <p class="storyline">
+      那么近年LM领域出现热度攀升现象，是否来源于突破性论文的产生呢？
+    </p>
     <h1>论文引用关系图</h1>
     <p>
       该图展示了1987-2023年被引量高于100且与Language
@@ -96,7 +105,7 @@
       scrolling="no"
     >
     </iframe>
-    <p>
+    <p class="storyline">
       在论文这一微观层面上分析引用关系后，我们已经找到了领域内的重要论文。知识在引用网络上的传递，其中引用是面向过去，被引是面向未来，我们上升到宏观视角来说明发展连贯性与热度攀升也有关。
     </p>
     <h1>引文重叠比例热力图</h1>
@@ -111,7 +120,7 @@
       scrolling="no"
     >
     </iframe>
-    <p>
+    <p class="storyline">
       透过热度攀升现象看本质，接下来让我们从热度聚焦热点，看看模型领域的学者具体都在研究什么吧。
     </p>
     <h1>论文摘要词云图</h1>
@@ -128,7 +137,7 @@
       scrolling="no"
     >
     </iframe>
-    <p>
+    <p class="storyline">
       论文摘要抽词构建词云，得到的结果是研究有关的方方面面杂糅的。我们采用openAlex定义的与论文相关的concepts将研究内容按主题概念清晰打标概括，再次进行展示。
     </p>
     <h1>不同concept随着年份和language model之间相关性的变化</h1>
@@ -153,7 +162,7 @@
       scrolling="no"
     >
     </iframe>
-    <p>
+    <p class="storyline">
       openAlex已经预定义了concepts之间的层级关系，但是这并不足以说明一篇研究通常选择聚焦的concept组合，我们可以通过密切的共现关系反映惯常的组合。
     </p>
     <h1>concept共现关系图</h1>
@@ -172,7 +181,7 @@
       scrolling="no"
     >
     </iframe>
-    <p>
+    <p class="storyline">
       在探讨了领域热度和其成因、领域内研究的内容和主题后，我们来看看领域学术资源在各个地区的分布，良好的区域学术环境将助推领域发展。
     </p>
     <h1>各大洲国家截止不同年份的累计发文量树图</h1>
@@ -188,7 +197,7 @@
       scrolling="no"
     >
     </iframe>
-    <p>我们将二维发文量引入到三维空间中展示。</p>
+    <p class="storyline">我们将二维发文量引入到三维空间中展示。</p>
     <p>各国发文总量分布</p>
     <p>
       这幅3d地球仪各个国家对应的颜色为各国在Language
@@ -201,7 +210,9 @@
       src="geograph/3d地图.html"
       scrolling="no"
     ></iframe>
-    <p>学术环境的重要组成个体是学术机构，下面是机构的区域分布。</p>
+    <p class="storyline">
+      学术环境的重要组成个体是学术机构，下面是机构的区域分布。
+    </p>
     <h1>机构区域分布图</h1>
     <p>
       这幅地图上的点坐标对应的是各文章所属机构的地理位置。对于3d地球仪中提到发文总量最高的美国和中国，均可见东部发文量远超西部的现象。<br />
@@ -214,7 +225,7 @@
       scrolling="no"
       style="margin-top: -100px; margin-bottom: -100px"
     ></iframe>
-    <p>
+    <p class="storyline">
       在全球化时代，加强机构之间的交流和合作可以促进学术知识的交流和传播，推进领域再全球社会的发展。下面的图选取从1970年至2023年的发文数据，以十年为间隔构建时间轴。
     </p>
     <p>文章所属机构地点分布：</p>
@@ -239,10 +250,5 @@
       由图可见从70年代至10年代国际与国内合作的次数均变多。同时研究人员相比于国际合作更倾向于国内合作。
     </p>
     <iframe width="100%" height="1500px" src="geograph/2d地图.html"></iframe>
-    <h1>小组分工</h1>
-    <li>王昭睿：热力图、树图</li>
-    <li>萧又筑：论文累计数量增长图、词云图、珍珠图</li>
-    <li>傅彦萌：所有地图</li>
-    <li>宜宣：论文引用关系图、concept共现图</li>
   </body>
 </html>
