--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     h1 {
       font-size: 24px;
-      color: #05bfdb;
+      color: #088395;
     }
     p {
       font-size: 16px;
@@ -32,7 +32,7 @@
       color: #0b2027;
     }
     li::marker {
-      color: #05bfdb;
+      color: #088395;
     }
     .storyline {
       color: #088395;
