--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     >
     </iframe>
     <p class="storyline">我们将二维发文量引入到三维空间中展示。</p>
-    <p>各国发文总量分布</p>
+    <h1>各国发文总量分布</h1>
     <p>
       这幅3d地球仪各个国家对应的颜色为各国在Language
       Model领域的总发文数，色阶如左侧所示。
@@ -228,7 +228,7 @@
     <p class="storyline">
       在全球化时代，加强机构之间的交流和合作可以促进学术知识的交流和传播，推进领域再全球社会的发展。下面的图选取从1970年至2023年的发文数据，以十年为间隔构建时间轴。
     </p>
-    <p>文章所属机构地点分布：</p>
+    <h1>文章所属机构地点分布</h1>
     <p>
       图中点坐标对应的是各文章所属机构的地理位置。把鼠标放在坐标点上可看到文章名称。<br />
       可以看到前面的图点很稀疏，后面的图点很稠密。若点固定为同一个大小、同一个透明度，无法同时清晰地展示六张图。像现在，10s和20s的点就不大易于分辨。不过还好点的大小和透明度都是可以调节的。<br />
@@ -236,13 +236,13 @@
       但是以发文量最大值设置色阶导致一个问题，发文量不高的地区颜色无法辨别。没关系，色阶的最大值最小值是可以修改的。是不是好多了？<br />
       如果想单独看每年各地区的发文量而不在意时间趋势，可以去除统一的色阶为每幅图单独设置色阶。这样每十年哪个地区发文最多就一目了然了。
     </p>
-    <p>国际合作关系分布：</p>
+    <h1>国际合作关系分布</h1>
     <p>
       由于按机构进行连线生成的图可读性较差，故按国家统计国际合作，同一篇论文中存在合作的国家之间以线相连。<br />
       合作次数越高线的不透明度越高。但由于前三张图合作次数普遍偏少，后两张图合作次数普遍偏多，难以找到可以同时适配每一张图的透明度，因此这里可以自己根据需要设置透明度。如果只想看那些国家间有合作可将透明度0.1，（点一下生成，再依此点一下时间轴的最后两个）当然线的粗细和线的弯曲度也是可以调节的。<br />
       从70年代至10年代国际合作的次数变多、范围变广，国际合作越来越密切。其中美国与欧洲以及美国与中国间合作最为密切。
     </p>
-    <p>国际、国内合作总数分布：</p>
+    <h1>国际、国内合作总数分布</h1>
     <p>
       各图根据该国国际或国内合作次数进行染色。为每幅图单独设置色阶。<br />
       由图可见，两图除数量外，颜色分布相当一致。国家国际合作数与国内合作数高度相关。这可能是因为一国所发文章总量越高，其国际和国内合作数都会越高。<br />
